Extract implementation to new files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,17 +4,17 @@ project(pocolog2msgpack)
 set(CMAKE_CXX_STANDARD 11)
 
 include(FindPkgConfig)
-find_package(Boost COMPONENTS system filesystem program_options REQUIRED)
+find_package(Boost COMPONENTS program_options REQUIRED)
 pkg_check_modules(POCOLOG_CPP "pocolog_cpp" REQUIRED)
 pkg_check_modules(TYPELIB "typelib" REQUIRED)
 include_directories(
-    ${POCOLOG_CPP_INCLUDE_DIRS} ${TYPELIB_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS}
+    src ${POCOLOG_CPP_INCLUDE_DIRS} ${TYPELIB_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS}
 )
 link_directories(
     ${POCOLOG_CPP_LIBRARY_DIRS} ${TYPELIB_LIBRARY_DIRS} ${Boost_LIBRARY_DIRS}
 )
 
-add_executable(pocolog2msgpack src/pocolog2msgpack.cpp)
+add_executable(pocolog2msgpack src/pocolog2msgpack.cpp src/Converter.cpp)
 target_link_libraries(
     pocolog2msgpack
     ${POCOLOG_CPP_LIBRARIES} ${TYPELIB_LIBRARIES} ${Boost_LIBRARIES}
