--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,3 +23,12 @@ install(
     TARGETS pocolog2msgpack
     DESTINATION bin
 )
+
+find_package(PythonInterp)
+if(PYTHONINTERP_FOUND)
+    install(
+        CODE "execute_process(
+            COMMAND ${PYTHON_EXECUTABLE} setup.py install --prefix=${CMAKE_INSTALL_PREFIX}
+            WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})"
+    )
+endif(PYTHONINTERP_FOUND)
