--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,3 +32,15 @@ if(PYTHONINTERP_FOUND)
             WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})"
     )
 endif(PYTHONINTERP_FOUND)
+
+find_package(Doxygen)
+if (DOXYGEN_FOUND)
+    if(DOXYGEN_DOT_EXECUTABLE)
+        SET(DOXYGEN_DOT_FOUND YES)
+    else(DOXYGEN_DOT_EXECUTABLE)
+        SET(DOXYGEN_DOT_FOUND NO)
+        SET(DOXYGEN_DOT_EXECUTABLE "")
+    endif(DOXYGEN_DOT_EXECUTABLE)
+    configure_file(Doxyfile.in Doxyfile @ONLY)
+    add_custom_target(doc doxygen Doxyfile)
+endif(DOXYGEN_FOUND)
