--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: af01/bolero_dependencies:latest
+      - image: af01/pocolog2msgpack-ci:latest
     steps:
       - checkout
       - run:
