--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
 build/
 *.pyc
 *.id2
+**/_build/*
+**/dist/
+**/eggs/
+**/lib/
+**/lib64/
+**/parts/
+**/sdist/
+**/var/
+*.egg-info/
+.installed.cfg
+*.egg
+*~
+.vscode
