--- a/python-pocolog2msgpack/Makefile
+++ b/python-pocolog2msgpack/Makefile
@@ -65,15 +65,17 @@ coverage: ## check code coverage quickly with the default Python
 	$(BROWSER) htmlcov/index.html
 
 docs: ## generate Sphinx HTML documentation, including API docs
-	rm -f docs/pocolog2msgpack.rst
-	rm -f docs/modules.rst
-	sphinx-apidoc -o docs/ pocolog2msgpack
-	$(MAKE) -C docs clean
-	$(MAKE) -C docs html
-	$(BROWSER) docs/_build/html/index.html
+	rm -f docsrc/pocolog2msgpack.rst
+	rm -f docsrc/modules.rst
+	sphinx-apidoc -o docsrc/ pocolog2msgpack
+	$(MAKE) -C docsrc clean
+	$(MAKE) -C docsrc html
+	##$(BROWSER) docsrc/_build/html/index.html
+	mkdir -p docs
+	cp -a docsrc/_build/html/. docs
 
 servedocs: docs ## compile the docs watching for changes
-	watchmedo shell-command -p '*.rst' -c '$(MAKE) -C docs html' -R -D .
+	watchmedo shell-command -p '*.rst' -c '$(MAKE) -C docsrc html' -R -D .
 
 release: dist ## package and upload a release
 	twine upload dist/*
