--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,7 +30,7 @@ if(PYTHONINTERP_FOUND)
     install(
         CODE "execute_process(
             COMMAND ${PYTHON_EXECUTABLE} setup.py install --prefix=${CMAKE_INSTALL_PREFIX}
-            WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})/python-pocolog2msgpack"
+            WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/python-pocolog2msgpack)"
     )
 endif(PYTHONINTERP_FOUND)
 
