--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,11 +25,11 @@ install(
     DESTINATION bin
 )
 
-find_package(PythonInterp)
+find_package(PythonInterp 3)
 if(PYTHONINTERP_FOUND)
     install(
         CODE "execute_process(
-            COMMAND ${PYTHON_EXECUTABLE} setup.py install --prefix=${CMAKE_INSTALL_PREFIX}
+            COMMAND ${PYTHON_EXECUTABLE} -m pip install --prefix=${CMAKE_INSTALL_PREFIX} .
             WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/python-pocolog2msgpack)"
     )
 endif(PYTHONINTERP_FOUND)
